--- a/package.json
+++ b/package.json
@@ -7,24 +7,39 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest",
+    "test:run": "vitest run",
+    "test:watch": "vitest --watch",
+    "eject": "react-scripts eject",
+    "prepare": "husky install",
+    "precommit": "lint-staged",
+    "clean": "rm -rf node_modules dist && npm install"
   },
   "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "@gsap/react": "^2.1.2",
+    "@tailwindcss/vite": "^4.0.8",
+    "clsx": "^2.1.1",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "react-router-dom": "^6.24.1",
-    "sass": "^1.77.6"
+    "tailwindcss": "^4.0.8"
   },
   "devDependencies": {
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
+    "@types/react": "^19.0.10",
+    "@types/react-dom": "^19.0.4",
     "@typescript-eslint/eslint-plugin": "^7.13.1",
     "@typescript-eslint/parser": "^7.13.1",
     "@vitejs/plugin-react": "^4.3.1",
     "eslint": "^8.57.0",
+    "eslint-config-prettier": "^10.0.1",
+    "eslint-plugin-prettier": "^5.2.3",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
+    "jsdom": "^26.0.0",
+    "prettier": "^3.5.2",
     "typescript": "^5.2.2",
-    "vite": "^5.3.1"
+    "vite": "^6.1.0",
+    "vitest": "^3.0.6"
   }
 }
