:tada: ci pipeline 구축

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -62,7 +62,7 @@ jobs:
         run: npm run lint
 
       # 테스트 실행
-      - run: vitest
+      - run: npm run test
 
       # 테스트 커버리지 업로드
       - name: Upload test coverage as artifact
