--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -15,6 +15,7 @@
     "isolatedModules": true,
     "moduleDetection": "force",
     "noEmit": false,
+    "emitDeclarationOnly": true,
     "jsx": "react-jsx",
 
     /* Linting */
