--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@tailwindcss/vite": "^4.0.8",
     "@testing-library/react": "^16.2.0",
     "clsx": "^2.1.1",
+    "motion": "^12.4.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
