--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "eject": "react-scripts eject",
     "prepare": "husky install",
     "precommit": "lint-staged",
-    "clean": "rm -rf node_modules dist && npm install"
+    "clean": "rm -rf node_modules dist && npm install",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "@gsap/react": "^2.1.2",
@@ -41,6 +43,7 @@
     "eslint-plugin-prettier": "^5.2.3",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
+    "gh-pages": "^6.3.0",
     "jsdom": "^26.0.0",
     "prettier": "^3.5.2",
     "typescript": "^5.2.2",
