--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
+  "homepage": "https://mystagingserver.store",
   "name": "react-portfolio",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
