--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "name": "react-portfolio",
   "private": true,
   "version": "1.0.0",
+  "build": "126",
   "type": "module",
   "scripts": {
     "dev": "vite",
