--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.2",
+    "@radix-ui/themes": "^3.2.1",
     "@tailwindcss/vite": "^4.0.8",
     "clsx": "^2.1.1",
     "motion": "^12.4.7",
@@ -29,12 +30,14 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.2.0",
-    "tailwindcss": "^4.0.8"
+    "tailwindcss": "^4.0.8",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^14.6.1",
+    "@types/node": "^24.9.1",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@typescript-eslint/eslint-plugin": "^7.13.1",
@@ -48,8 +51,11 @@
     "gh-pages": "^6.3.0",
     "jsdom": "^26.0.0",
     "prettier": "^3.5.2",
+    "prettier-plugin-tailwindcss": "^0.7.1",
     "typescript": "^5.2.2",
     "vite": "^6.1.0",
+    "vite-plugin-svgr": "^4.5.0",
+    "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^3.0.6"
   }
 }
