--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "prettier": "^3.5.2",
     "prettier-plugin-tailwindcss": "^0.7.1",
     "typescript": "^5.2.2",
-    "vite": "7.1.11",
+    "vite": "^6.1.0",
     "vite-plugin-svgr": "^4.5.0",
     "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^3.0.6"
