--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "test": "vitest",
     "test:run": "vitest run",
     "test:watch": "vitest --watch",
-    "prepare": "husky install",
+    "postinstall": "husky install",
     "precommit": "lint-staged",
     "clean": "rm -rf node_modules dist && npm install"
   },
