chore: 엔티티 분리(project, skill, career)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,9 @@
     "noEmit": false,
     "strict": true,
     "baseUrl": "./",
+    "paths": {
+      "@/*": ["src/*"]
+    },
     "types": ["vitest/globals", "@testing-library/jest-dom"]
   },
   "include": ["src"]
