fix: 타입검사만 수정하도록 build 스크립트 수정

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
     "esModuleInterop": true,
     "skipLibCheck": true,
     "composite": true,
-    "noEmit": false,
+    "noEmit": true,
     "strict": true,
     "baseUrl": "./",
     "paths": {
