fix: 타입검사만 수정하도록 build 스크립트 수정

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,8 +8,10 @@
     "moduleResolution": "node",
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "composite": true,
     "noEmit": true,
+    "emitDeclarationOnly": false,
+    "composite": false,
+    "incremental": false,
     "strict": true,
     "baseUrl": "./",
     "paths": {
