--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,32 @@
 {
-  "files": [],
-  "references": [{ "path": "./tsconfig.app.json" }, { "path": "./tsconfig.node.json" }],
   "compilerOptions": {
-    "target": "ESNext",
+    "target": "ES2020",
+    "useDefineForClassFields": true,
+    "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
-    "jsx": "react-jsx",
-    "moduleResolution": "node",
-    "esModuleInterop": true,
     "skipLibCheck": true,
+
+    /* Bundler mode */
+    "moduleResolution": "bundler",
+    "allowImportingTsExtensions": true,
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "moduleDetection": "force",
+
+    /* 파일 생성 금지 & 복잡한 설정 끄기 */
     "noEmit": true,
     "emitDeclarationOnly": false,
     "composite": false,
     "incremental": false,
+    "jsx": "react-jsx",
+
+    /* Linting */
     "strict": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noFallthroughCasesInSwitch": true,
+    "allowSyntheticDefaultImports": true,
+
     "baseUrl": "./",
     "paths": {
       "@/*": ["src/*"]
